app/globals.css
@import "tailwindcss";

:root {
  --color1: #bad5af;
  --color2: #fae275;
  --color3: #ecf8fd;
  --color4: #593c36;
  --color5: #212738;
}

.dark {
  --color1: #05090f;
  --color2: #604347;
  --color3: #1e2433;
  --color4: #fae275;
  --color5: #daf1fb;
}

@theme {
  --color-color1: var(--color1);
  --color-color2: var(--color2);
  --color-color3: var(--color3);
  --color-color4: var(--color4);
  --color-color5: var(--color5);
}

.gradient-1 {
  background: #bad5af;
  background: linear-gradient(
    135deg,
    rgba(196, 220, 188, 1) 0%,
    rgba(186, 213, 175, 1) 50%,
    rgba(173, 206, 161, 1) 100%
  );
}

.gradient-2 {
  background: #05090f;
  background: linear-gradient(
    135deg,
    rgba(5, 9, 15, 1) 0%,
    rgba(0, 0, 0, 1) 100%
  );
}

button,
select {
  @apply cursor-pointer opacity-99;
}

button.common {
  @apply text-color5 border-color5 focus-visible:outline-2 lg:focus-visible:outline-3 outline-color4 md:hover:scale-110;
}

.triangle {
  @apply [clip-path:polygon(50%_0%,0%_100%,100%_100%)];
}

.slide-right {
  transform: translateX(-100dvw);
}

.slide-left {
  transform: translateX(100dvw);
}

@keyframes hovering {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(5%);
  }
  100% {
    transform: translateY(0);
  }
}

